--- a/index.html
+++ b/index.html
@@ -59,6 +59,30 @@
         </div>
       </header>
 
+      <section class="sect-aboutme">
+        <div class="box-imageme">
+          <img src="/asset/photo.png" alt="foto" />
+        </div>
+        <div class="bpx-textme">
+          <h2>Um pouco sobre mim</h2>
+          <p>
+            Minha paixão nasceu em meados 2017, onde criei um
+            <strong>segundo canal no youtube</strong>, era um canal indefinido,
+            mas lembro que tinha tutorial e até lives.
+          </p>
+          <p>
+            Com o canal, tive que desenvolver 2 habilidades, edição de vídeo e
+            design de thumbnail. Tudo com um <strong>smartphone.</strong>
+          </p>
+          <br />
+          <p>
+            No final de 2022, conheci a programação (frontend), daí desenvolvi
+            minhas 3 habilidades. Hoje eu amo trabalhar com isso, me fez chegar
+            até aqui.
+          </p>
+        </div>
+      </section>
+
       <nav class="nav-memu">
         <a href="" class="menu-link menuActive">Programador</a>
         <a href="" class="menu-link">Designer</a>
