--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,30 @@
         </div>
       </header>
 
+      <section class="sect-aboutme">
+        <div class="box-imageme">
+          <img src="/asset/photo.png" alt="foto" />
+        </div>
+        <div class="bpx-textme">
+          <h2>Um pouco sobre mim</h2>
+          <p>
+            Minha paixão nasceu em meados 2017, onde criei um
+            <strong>segundo canal no youtube</strong>, era um canal indefinido,
+            mas lembro que tinha tutorial e até lives.
+          </p>
+          <p>
+            Com o canal, tive que desenvolver 2 habilidades, edição de vídeo e
+            design de thumbnail. Tudo com um <strong>smartphone.</strong>
+          </p>
+          <br />
+          <p>
+            No final de 2022, conheci a programação (frontend), daí desenvolvi
+            minhas 3 habilidades. Hoje eu amo trabalhar com isso, me fez chegar
+            até aqui.
+          </p>
+        </div>
+      </section>
+
       <nav class="nav-memu">
         <a href="" class="menu-link menuActive">Programador</a>
         <a href="" class="menu-link">Designer</a>
@@ -66,6 +90,7 @@
       </nav>
 
       <section class="nav-content">
+        <!-- ===== DEV ===== -->
         <article class="art-content contActive">
           <header class="headNav">
             <nav class="menuSlide">
@@ -83,27 +108,25 @@
               <img src="/asset/project/mwl.png" class="slide-bg" />
               <div class="slide__content">
                 <h2>My Work Lab.</h2>
-                <p class="subtitle">A pure CSS and HTML slideshow concept.</p>
-                <p>To add or remove slides:</p>
-                <ul>
-                  <li>Add a new slide template in the HTML</li>
-                  <li>Update the <code>$slide-count</code> SCSS variable</li>
-                  <li>
-                    Tab colours: Update the <code>$c-slides</code> SCSS variable
-                  </li>
-                  <li>
-                    Slide popout images: Update the <code>$b-slides</code> SCSS
-                    variable
-                  </li>
-                </ul>
-                <p>Use the tabs below to change slide.</p>
-                <p>Et voila.</p>
-                <a
-                  href="https://myworklab.netlify.app/"
-                  target="_blank"
-                  class="repo"
-                  ><ion-icon name="logo-github"></ion-icon>Repositório</a
-                >
+                <p class="subtitle">Um dashboard personalizado.</p>
+                <p>
+                  Tenho meus Repositório, e destaco os favoritos. Além de pegar
+                  algumas infos do perfil do github.
+                </p>
+                <div class="links-site">
+                  <a
+                    href="https://github.com/jej3zin/MyWorkLab"
+                    target="_blank"
+                    class="repo"
+                    ><ion-icon name="logo-github"></ion-icon>Repositório</a
+                  >
+                  <a
+                    href="https://myworklab.netlify.app/"
+                    target="_blank"
+                    class="repo"
+                    ><ion-icon name="logo-github"></ion-icon>Website</a
+                  >
+                </div>
               </div>
             </div>
 
@@ -120,12 +143,20 @@
                   Desenvolvido com intuito de gerar entreterimento e muita
                   diversão ao chat, já o streamer, nem tanto.
                 </p>
-                <a
-                  href="https://mafiadopix.netlify.app/"
-                  target="_blank"
-                  class="repo"
-                  ><ion-icon name="logo-github"></ion-icon>Repositório</a
-                >
+                <div class="links-site">
+                  <a
+                    href="https://github.com/jej3zin/Mafia-do-Pix"
+                    target="_blank"
+                    class="repo"
+                    ><ion-icon name="logo-github"></ion-icon>Repositório</a
+                  >
+                  <a
+                    href="https://mafiadopix.netlify.app/"
+                    target="_blank"
+                    class="repo"
+                    ><ion-icon name="logo-github"></ion-icon>Website</a
+                  >
+                </div>
               </div>
             </div>
 
@@ -134,14 +165,25 @@
               <img src="/asset/project/otakuhub.png" class="slide-bg" />
               <div class="slide__content">
                 <h2>OtakuHub</h2>
-                <p class="subtitle">Yet more here</p>
-                <p></p>
-                <a
-                  href="https://pjt-otakuhub.netlify.app/"
-                  target="_blank"
-                  class="repo"
-                  ><ion-icon name="logo-github"></ion-icon>Repositório</a
-                >
+                <p class="subtitle">Uma comunidade dedicada aos otakus</p>
+                <p>
+                  Desenvolvido para não só ser uma comunidade, mas também ter
+                  cronogramas dos animes.
+                </p>
+                <div class="links-site">
+                  <a
+                    href="https://github.com/jej3zin/OtakuHub"
+                    target="_blank"
+                    class="repo"
+                    ><ion-icon name="logo-github"></ion-icon>Repositório</a
+                  >
+                  <a
+                    href="https://pjt-otakuhub.netlify.app/"
+                    target="_blank"
+                    class="repo"
+                    ><ion-icon name="logo-github"></ion-icon>Website</a
+                  >
+                </div>
               </div>
             </div>
 
@@ -150,30 +192,52 @@
               <img src="/asset/project/spawnverse.png" class="slide-bg" />
               <div class="slide__content">
                 <h2>SpawnVerse</h2>
-                <p class="subtitle">Yada yada</p>
-                <p></p>
-                <a
-                  href="https://pjt-otakuhub.netlify.app/"
-                  target="_blank"
-                  class="repo"
-                  ><ion-icon name="logo-github"></ion-icon>Repositório</a
-                >
+                <p class="subtitle">Uma comunidade dedicada aos gamers</p>
+                <p>
+                  Desenvolvido para encontrar seus jogos preferidos, e descobrir
+                  outros novos.
+                </p>
+                <div class="links-site">
+                  <a
+                    href="https://github.com/jej3zin/SpawnVerse"
+                    target="_blank"
+                    class="repo"
+                    ><ion-icon name="logo-github"></ion-icon>Repositório</a
+                  >
+                  <a
+                    href="https://spawnverse.netlify.app/"
+                    target="_blank"
+                    class="repo"
+                    ><ion-icon name="logo-github"></ion-icon>Website</a
+                  >
+                </div>
               </div>
             </div>
 
             <!-- Slide 5 -->
             <div class="slide">
-              <img src="/asset/project/luminwe.png" class="slide-bg" />
+              <img src="/asset/project/luminew.png" class="slide-bg" />
               <div class="slide__content">
                 <h2>LumiNew</h2>
-                <p class="subtitle">It's over</p>
+                <p class="subtitle">
+                  Desenvolvido para quem precisa encontrar uma boa vestimenta, e
+                  de sua preferência.
+                </p>
                 <p></p>
-                <a
-                  href="https://luminew.netlify.app/"
-                  target="_blank"
-                  class="repo"
-                  ><ion-icon name="logo-github"></ion-icon>Repositório</a
-                >
+                <div class="links-site">
+                  <a
+                    href="https://github.com/jej3zin/LumiNew"
+                    target="_blank"
+                    class="repo"
+                    ><ion-icon name="logo-github"></ion-icon>Repositório</a
+                  >
+                  <a
+                    href="https://luminew.netlify.app/"
+                    target="_blank"
+                    class="repo"
+                    ><ion-icon name="logo-github"></ion-icon>Website</a
+                  >
+                </div>
               </div>
             </div>
 
@@ -181,20 +245,166 @@
           </fieldset>
         </article>
 
-        <article class="art-content">
-          <header class="headNav">
-            <h2>Designer</h2>
-          </header>
+        <!-- ===== DESIGNER ===== -->
+        <article class="design art-content">
+          <div class="designer-slider" id="designerSlider">
+            <!-- NAV SLIDE -->
+            <nav class="designer-nav">
+              <button class="designer-btn active" data-slide="0">
+                Pika Pika Pau
+              </button>
+              <button class="designer-btn" data-slide="1">SayMetty</button>
+              <button class="designer-btn" data-slide="2">Better Luufy</button>
+            </nav>
+
+            <!-- SLIDES -->
+            <div class="designer-slides">
+              <!-- SLIDE 01 -->
+              <div class="designer-slide active">
+                <div class="designer-img">
+                  <div class="visual">
+                    <img
+                      src="/asset/design/pikapau/icone.webp"
+                      class="icone"
+                      alt="Avatar"
+                    />
+                    <img
+                      class="banner"
+                      src="/asset/design/pikapau/banner.webp"
+                      alt="Banner"
+                    />
+                  </div>
+
+                  <div class="thumbs">
+                    <img
+                      class="thumb"
+                      src="/asset/design/pikapau/thumb (1).jpg"
+                    />
+                    <img
+                      class="thumb"
+                      src="/asset/design/pikapau/thumb (2).jpg"
+                    />
+                    <img
+                      class="thumb"
+                      src="/asset/design/pikapau/thumb (3).jpg"
+                    />
+                  </div>
+                </div>
+
+                <div class="designer-text">
+                  <h2>Pika Pika Pau</h2>
+                  <p class="subtitle designer-subtitle">
+                    Canal focado em cortes e entretenimento rápido.
+                  </p>
+                  <p>
+                    Identidade visual simples, forte e fácil de reconhecer.
+                    Canal criado por <strong>Anônimo</strong>.
+                  </p>
+                </div>
+              </div>
+
+              <!-- SLIDE 02 -->
+              <div class="designer-slide">
+                <div class="designer-img">
+                  <div class="visual">
+                    <img
+                      src="/asset/design/saymetty/icone.png"
+                      class="icone"
+                      alt="Avatar"
+                    />
+                    <img
+                      class="banner"
+                      src="/asset/design/saymetty/banner.png"
+                      alt="Banner"
+                    />
+                  </div>
+
+                  <div class="thumbs">
+                    <img
+                      class="thumb"
+                      src="/asset/design/saymetty/thumb (1).png"
+                    />
+                    <img
+                      class="thumb"
+                      src="/asset/design/saymetty/thumb (2).png"
+                    />
+                    <img
+                      class="thumb"
+                      src="/asset/design/saymetty/thumb (3).png"
+                    />
+                  </div>
+                </div>
+
+                <div class="designer-text">
+                  <h2>SayMetty</h2>
+                  <p class="subtitle designer-subtitle">
+                    Canal focado em gameplays e lives.
+                  </p>
+                  <p>
+                    Identidade temática com cores consistentes e branding
+                    sólido. Canal criado por <strong>Lena Manber</strong>.
+                  </p>
+                </div>
+              </div>
+
+              <!-- SLIDE 03 -->
+              <div class="designer-slide">
+                <div class="designer-img">
+                  <div class="visual">
+                    <img
+                      src="/asset/design/luffy/icone.png"
+                      class="icone"
+                      alt="Avatar"
+                    />
+                    <img
+                      class="banner"
+                      src="/asset/design/luffy/banner.png"
+                      alt="Banner"
+                    />
+                  </div>
+
+                  <div class="thumbs">
+                    <img
+                      class="thumb"
+                      src="/asset/design/luffy/thumb (1).png"
+                    />
+                    <img
+                      class="thumb"
+                      src="/asset/design/luffy/thumb (2).png"
+                    />
+                    <img
+                      class="thumb"
+                      src="/asset/design/luffy/thumb (3).png"
+                    />
+                  </div>
+                </div>
+
+                <div class="designer-text">
+                  <h2>Better Luufy</h2>
+                  <p class="subtitle designer-subtitle">
+                    Canal focado em entretenimento e gameplays.
+                  </p>
+                  <p>
+                    Comunicação clara, estética forte e identidade profissional.
+                    Canal Criado por <strong>Anônimo</strong>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
         </article>
 
-        <article class="art-content">
+        <!-- ===== EDITOR ===== -->
+        <article class="editor art-content">
           <header class="headNav">
-            <h2>Editor</h2>
+            <h2>Editor de Vídeo</h2>
           </header>
+          <div class="center">
+            <p>Em breve...</p>
+          </div>
         </article>
       </section>
-
-      <header class="head">
+      <!-- <header class="head">
         <nav class="head-menu">
           <ul class="head-ul">
             <li class="head-list">
@@ -282,16 +492,32 @@
             </li>
           </ul>
         </nav>
-      </header>
+      </header> -->
+      <footer class="footer">
+        <div class="footer-content">
+          <div class="footer-brand">
+            <img src="https://github.com/jej3zin.png" alt="Jean Oliveira" />
+            <p>Criando coisas na internet desde 2017.</p>
+          </div>
 
-      <main class="main">
-        <header class="mainhead">
-          projeto: Textos
+          <nav class="footer-links">
+            <a href="#content">Início</a>
+            <a href="https://github.com/jej3zin" target="_blank">GitHub</a>
+            <a href="https://www.youtube.com/@Jej3zin" target="_blank"
+              >YouTube</a
+            >
+            <a href="https://www.instagram.com/jej3zin/" target="_blank"
+              >Instagram</a
+            >
+          </nav>
 
-          <ion-icon name="logo-github"></ion-icon>
-        </header>
-        <div class="square">textos</div>
-      </main>
+          <div class="footer-copy">
+            <p>© 2025-2027 Jean Oliveira</p>
+          </div>
+        </div>
+      </footer>
+
+      <script></script>
     </div>
 
     <script type="module" src="/js/index.js"></script>
